# Telea

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  main1.cpp  t.csv
opencvInpainting/: inpaint.cpp  precomp.hpp
python/: main.py
